# English_skill_tester

./: .coverage  .cursorrules  .gitignore  .pylintrc  README.md  build.bat  build_windows.spec  check_setup.py  coverage.xml  main.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  run_tests.sh
.cursor_memo/: ASYNC_IMPLEMENTATION_SUMMARY.md  ASYNC_IMPROVEMENTS.md  CODE_REVIEW_SUMMARY.md  COVERAGE_REPORT.md  TESTING_GUIDE.md  TEST_RESULTS.md  TROUBLESHOOTING.md  specifications.md
.github/workflows/: test.yml
app/: config.py
app/gui/: conversation_window.py  history_window.py  home_window.py  result_window.py
app/models/: schemas.py
app/services/: api_check_service.py  audio_service.py  azure_service.py  evaluation_service.py  openai_service.py  realtime_service.py  search_service.py  storage_service.py
hooks/: hook-flet.py
stubs/flet/: __init__.pyi
stubs/numpy/: __init__.pyi
stubs/numpy/typing/: __init__.pyi
stubs/pydub-stubs/: __init__.pyi
stubs/sounddevice/: __init__.pyi
tests/: __init__.py  test_api_check_service.py  test_audio_service.py  test_conversation_window.py  test_conversation_window_methods.py  test_evaluation_service.py  test_imports.py  test_openai_service.py  test_storage_service.py
